--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.why.happy_movie">
+    package="com.bw.movie">
 
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -13,19 +13,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name="com.why.happy_movie.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.JumpActivity" />
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.HomeActivity" />
-        <activity android:name=".activity.RegisterActivity" />
+        <activity android:name="com.why.happy_movie.activity.JumpActivity" />
+        <activity android:name="com.why.happy_movie.activity.LoginActivity" />
+        <activity android:name="com.why.happy_movie.activity.HomeActivity" />
+        <activity android:name="com.why.happy_movie.activity.RegisterActivity" />
         <activity
-            android:name=".myactivity.MessageActivity"
+            android:name="com.why.happy_movie.myactivity.MessageActivity"
             android:label="@string/title_activity_message"
             android:theme="@style/AppTheme" />
     </application>
