--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bw.movie">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:name="com.why.happy_movie.MApp"
         android:allowBackup="true"
@@ -29,6 +29,8 @@
             android:name="com.why.happy_movie.myactivity.MessageActivity"
             android:label="@string/title_activity_message"
             android:theme="@style/AppTheme" />
+        <activity android:name="com.why.happy_movie.activity.DetailsActivity" />
+        <activity android:name="com.why.happy_movie.detailsactivity.MovieDActivity"></activity>
     </application>
 
 </manifest>
