--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name="com.why.happy_movie.activity.LoginActivity" />
         <activity android:name="com.why.happy_movie.activity.HomeActivity" />
         <activity android:name="com.why.happy_movie.activity.RegisterActivity" />
+        <activity android:name="com.why.happy_movie.activity.DetailsActivity" />
         <activity
             android:name="com.why.happy_movie.myactivity.MessageActivity"
             android:label="@string/title_activity_message"
