--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation ('com.jcodecraeer:xrecyclerview:1.5.9'){
-        exclude group: 'com.android.support'}
+    implementation('com.jcodecraeer:xrecyclerview:1.5.9') {
+        exclude group: 'com.android.support'
+    }
 }
