--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     signingConfigs {
@@ -24,6 +25,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            jni.srcDirs=[]
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+}
+greendao {
+    schemaVersion 1  //版本
+    daoPackage 'com.why.happy_movie.dao' // 一般为app包名+生成文件的文件夹名
+    targetGenDir 'src/main/java' //生成文件路径
 }
 
 dependencies {
@@ -49,4 +62,9 @@ dependencies {
     implementation('com.jcodecraeer:xrecyclerview:1.5.9') {
         exclude group: 'com.android.support'
     }
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'org.greenrobot:greendao-generator:3.2.2'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.5'
+    implementation files('libs/BaiduLBS_Android.jar')
 }
