--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,9 @@
 
         <activity android:name="com.why.happy_movie.activity.CinemaActivity" />
         <activity android:name="com.why.happy_movie.activity.IdeaActivity" />
-        <activity android:name="com.why.happy_movie.activity.MyLoveActivity"></activity>
+        <activity android:name="com.why.happy_movie.activity.MyLoveActivity" />
+        <activity android:name="com.why.happy_movie.activity.MyRccordActivity" />
+        <activity android:name="com.why.happy_movie.activity.ResetPwdActivity"></activity>
     </application>
 
 </manifest>
