--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.5'
     implementation files('libs/BaiduLBS_Android.jar')
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+
 
 }
