--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,14 @@
         <activity android:name="com.why.happy_movie.activity.BuyCinemaActivity" />
         <activity android:name="com.why.happy_movie.activity.BuyMoieListActivity" />
         <activity android:name="com.why.happy_movie.activity.StatActivity"></activity>
+
+        <!-- 微信支付 -->
+        <activity
+            android:name=".wxapi.WXPayEntryActivity"
+            android:exported="true"
+            android:launchMode="singleTop"/>
+
+
     </application>
 
 </manifest>
