--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'org.greenrobot.greendao'
 
 android {
     signingConfigs {
-        config {
+        moviekey {
             keyAlias 'bw_movie'
             keyPassword '123456'
             storeFile file('C:/Users/admin/Desktop/movie.keystore')
@@ -18,19 +18,25 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        signingConfig signingConfigs.moviekey
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.moviekey
+        }
+        debug {
+            signingConfig signingConfigs.moviekey
         }
     }
-
     sourceSets {
         main {
             jni.srcDirs = []
             jniLibs.srcDirs = ['libs']
         }
+    }
+    productFlavors {
     }
 }
 greendao {
@@ -69,6 +75,4 @@ dependencies {
     implementation 'com.dou361.ijkplayer:jjdxm-ijkplayer:1.0.5'
     implementation files('libs/BaiduLBS_Android.jar')
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
-
-
 }
