--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,11 +62,9 @@
 
         <!-- 微信支付 -->
         <activity
-            android:name=".wxapi.WXPayEntryActivity"
+            android:name="com.bw.movie.wxapi.WXPayEntryActivity"
             android:exported="true"
             android:launchMode="singleTop"/>
-
-
     </application>
 
 </manifest>
