--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,15 +58,14 @@
         <activity android:name="com.why.happy_movie.activity.ResetPwdActivity" />
         <activity android:name="com.why.happy_movie.activity.BuyCinemaActivity" />
         <activity android:name="com.why.happy_movie.activity.BuyMoieListActivity" />
-        <activity android:name="com.why.happy_movie.activity.StatActivity"></activity>
+        <activity android:name="com.why.happy_movie.activity.StatActivity" />
 
         <!-- 微信支付 -->
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
-            android:launchMode="singleTop"/>
-
-
+            android:launchMode="singleTop" />
+        <activity android:name="com.why.happy_movie.activity.MyNewsActivity"></activity>
     </application>
 
 </manifest>
