--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,10 @@
             android:exported="true"
             android:launchMode="singleTop" />
 
+        <!--微信登录-->
+        <activity android:name=".wxapi.WXEntryActivity"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
