--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        flavorDimensions "versionCode"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.moviekey
 
@@ -24,6 +25,7 @@ android {
             // 设置支持的SO库架构
             abiFilters 'armeabi' , 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -42,7 +44,29 @@ android {
         }
     }
     productFlavors {
+        kuan {
+            signingConfig signingConfigs.moviekey
+        }
+        xiaomi {
+            signingConfig signingConfigs.moviekey
+        }
+        qh360 {
+            signingConfig signingConfigs.moviekey
+        }
+        baidu {
+            signingConfig signingConfigs.moviekey
+        }
+        wandoujia {
+            signingConfig signingConfigs.moviekey
+        }
+        yingyongbao {
+            signingConfig signingConfigs.moviekey
+        }
     }
+    productFlavors.all {
+        flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+    }
+
 }
 greendao {
     schemaVersion 1  //版本
@@ -82,4 +106,8 @@ dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation 'com.tencent.bugly:crashreport:2.8.6'
     implementation 'com.tencent.bugly:nativecrashreport:3.6.0.1'
+    implementation 'com.umeng.umsdk:analytics:8.0.0'
+    implementation 'com.umeng.umsdk:common:2.0.0'
+
+    implementation 'com.android.support:multidex:1.0.3'
 }
