--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,12 @@
         <activity android:name=".wxapi.WXEntryActivity"
             android:exported="true"/>
 
-
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="5c510a95b465f5cc58000426"/>    // key
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${UMENG_CHANNEL_VALUE}" />
 
     </application>
 
