--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <application
         android:name="com.why.happy_movie.MApp"
         android:allowBackup="true"
-        android:icon="@drawable/tubiao"
+        android:icon="@mipmap/name"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -35,7 +35,9 @@
         </activity>
         <activity android:name="com.why.happy_movie.activity.JumpActivity" />
         <activity android:name="com.why.happy_movie.activity.LoginActivity" />
-        <activity android:name="com.why.happy_movie.activity.HomeActivity" />
+        <activity android:name="com.why.happy_movie.activity.HomeActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden"
+            android:screenOrientation="portrait"/>
         <activity android:name="com.why.happy_movie.activity.RegisterActivity" />
         <activity android:name="com.why.happy_movie.activity.DetailsActivity" />
         <activity
